# dj-paddle

./: .editorconfig  .gitignore  .travis.yml  CODEOWNERS  CONTRIBUTING.rst  LICENSE  MANIFEST.in  Makefile  README.rst  setup.cfg  setup.py  tox.ini
.github/: ISSUE_TEMPLATE.md
djpaddle/: __init__.py  admin.py  api.py  apps.py  context_processors.py  fields.py  mappers.py  models.py  settings.py  signals.py  urls.py  utils.py  views.py
djpaddle/management/commands/: djpaddle_sync_plans_from_paddle.py  djpaddle_sync_subscribers_from_paddle.py
djpaddle/migrations/: 0001_initial.py  0002_auto_20200410_0056.py  0002_checkout.py  0003_auto_20200410_0455.py  0003_increase_length_of_paddle_ids.py  0004_auto_20210119_0436.py
djpaddle/templates/: djpaddle_paddlejs.html  djpaddle_post_checkout.html
docs/: Makefile  conf.py  getting_started.rst  index.rst  make.bat  paddle_checkout.rst  requirements.txt  testing.rst
tests/: __init__.py  settings.py  test_api.py  test_checkout_api.py  test_command_sync_plans.py  test_context_processors.py  test_fields.py  test_mappers.py  test_models.py  test_post_checkout_api.py  test_settings.py  test_utils.py  test_webhooks.py  urls.py  utils.py
tests/fixtures/webhooks/: __init__.py  dispute_closed.txt  dispute_created.txt  high_risk_transaction_updated.txt  new_audience_member.txt  new_payout.txt  order_processing_completed.txt  payout_paid.txt  subscription_updated.txt
tests/webhooks/: test_webhooks.py
tests/webhooks/fixtures/: high_risk_transaction_created.txt  payment_refunded.txt  payment_success.txt  subscription_created.txt  (+5 more)
