[metadata]
name = dj-paddle
version = 0.1.1
description = Django + Paddle Made Easy
author = Florian Purchess
author_email = florian.purchess@googlemail.com
url = https://github.com/dj-paddle/dj-paddle/
download_url = https://github.com/dj-paddle/dj-paddle/tarball/master
long_description_content_type = text/x-rst
keywords = django, paddle, payments
classifiers =
    Development Status :: 3 - Alpha
    Environment :: Web Environment
    Intended Audience :: Developers
    License :: OSI Approved :: MIT License
    Topic :: Office/Business :: Financial
    Programming Language :: Python :: 3
    Programming Language :: Python :: 3.5
    Programming Language :: Python :: 3.6
    Programming Language :: Python :: 3.7
    Programming Language :: Python :: 3.8
    Framework :: Django
    Framework :: Django :: 2.1
    Framework :: Django :: 2.2
    Framework :: Django :: 3.0

[options]
packages = find:
include_package_data = True
zip_safe = False
install_requires =
    django>=2.1
    pycryptodome>=3.9.4
    phpserialize>=1.3
    paddle-python>=0.5.1

[options.packages.find]
exclude =
    docs
    tests
    tests.*

[bdist_wheel]
universal = 0
